# trfolio

./: .gitignore  LICENSE  README.md  TICKER_OVERRIDES.md  app.py  main.py  pyproject.toml
sample_portfolio/: sample_portfolio.duckdb
src/: config_sample.py  data_extractor.py  file_handler.py  models.py  name_cleaner.py  position_manager.py  stock_split_handler.py  storage.py  ticker_mapper.py  utils.py
src/dashboard/: __init__.py  calculations.py  config_loader.py  data_loader.py  sidebar.py  theme.py
src/dashboard/components/: __init__.py  crypto_deep_dive.py  etf_deep_dive.py  income_deep_dive.py  overview.py  stocks_deep_dive.py  transaction_log.py
tests/: test_model.py
