[project]
name = "trfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.1",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pypdf>=6.1.3",
    "pyproject-toml>=0.1.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.3",
    "streamlit>=1.50.0",
    "yfinance>=0.2.66",
]
